# openenv-boardroom

./: .dockerignore  .gitignore  Dockerfile  README.md  demo_rewards.py  inference.py  openenv.yaml  pyproject.toml  train_grpo.py  validate-submission.sh
.github/workflows/: ci.yml
demo_output/: all_scores.csv  improvement_summary.csv  multi_agent_scores.csv  naive_multi_agent_scores.csv  single_agent_scores.csv
my_env/: .env.example  README.md  __init__.py  baseline_agent.py  client.py  inference.py  models.py  openenv.yaml  policy.py  pyproject.toml
my_env/server/: Dockerfile  __init__.py  app.py  audit_trail.py  boardroom_environment.py  counterfactual_engine.py  data_generator.py  explanation_grader.py  multi_agent_app.py  multi_agent_boardroom_environment.py  multi_agent_reward_calculator.py  noise_injector.py  requirements.txt  reward_calculator.py  stakeholder_simulator.py
my_env/tests/: conftest.py  test_audit_trail.py  test_client.py  test_environment.py  test_explanation_grader.py  test_multi_agent_environment.py  test_multi_agent_handlers.py  test_multi_agent_integration.py  test_multi_agent_properties.py  test_multi_agent_reward_calculator.py  test_policy.py  test_reward_calculator.py
server/: app.py
